src/parser.output
Terminals unused in grammar

    END


Grammar

    0 $accept: program $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | L_BRAC expression R_BRAC

    5 postfix_expression: primary_expression
    6                   | postfix_expression L_SQ expression R_SQ
    7                   | postfix_expression L_BRAC R_BRAC
    8                   | postfix_expression L_BRAC argument_expression_list R_BRAC
    9                   | postfix_expression DOT IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list COMMA assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF L_BRAC type_name R_BRAC

   21 unary_operator: AND_UNARY
   22               | PTR_TIMES
   23               | ADD_UNARY
   24               | SUB_OP
   25               | TILDE
   26               | EXCLA

   27 cast_expression: unary_expression
   28                | L_BRAC type_name R_BRAC cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression PTR_TIMES cast_expression
   31                          | multiplicative_expression DIV_OP cast_expression
   32                          | multiplicative_expression MOD_OP cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression ADD_UNARY multiplicative_expression
   35                    | additive_expression SUB_OP multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression LT_OP shift_expression
   41                      | relational_expression GT_OP shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression AND_UNARY equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression XOR_OP and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression OR_UNARY exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression TERNARY_OP expression COLON conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: EQ_SIGN
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression COMMA assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers SEMI
   76            | declaration_specifiers init_declarator_list SEMI

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator

   84 $@1: %empty

   85 init_declarator_list: init_declarator_list COMMA init_declarator $@1

   86 init_declarator: declarator
   87                | declarator EQ_SIGN initializer

   88 storage_class_specifier: TYPEDEF
   89                        | EXTERN
   90                        | STATIC
   91                        | AUTO
   92                        | REGISTER

   93 type_specifier: VOID
   94               | CHAR
   95               | SHORT
   96               | INT
   97               | LONG
   98               | FLOAT
   99               | DOUBLE
  100               | SIGNED
  101               | UNSIGNED
  102               | struct_or_union_specifier
  103               | enum_specifier
  104               | TYPE_NAME

  105 struct_or_union_specifier: struct_or_union IDENTIFIER L_CURL struct_declaration_list R_CURL
  106                          | struct_or_union L_CURL struct_declaration_list R_CURL
  107                          | struct_or_union IDENTIFIER

  108 struct_or_union: STRUCT
  109                | UNION

  110 struct_declaration_list: struct_declaration
  111                        | struct_declaration_list struct_declaration

  112 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier
  115                         | type_qualifier specifier_qualifier_list
  116                         | type_qualifier

  117 struct_declarator_list: struct_declarator
  118                       | struct_declarator_list COMMA struct_declarator

  119 struct_declarator: declarator
  120                  | COLON constant_expression
  121                  | declarator COLON constant_expression

  122 enum_specifier: ENUM L_CURL enumerator_list R_CURL
  123               | ENUM IDENTIFIER L_CURL enumerator_list R_CURL
  124               | ENUM IDENTIFIER

  125 enumerator_list: enumerator
  126                | enumerator_list COMMA enumerator

  127 enumerator: IDENTIFIER
  128           | IDENTIFIER EQ_SIGN constant_expression

  129 type_qualifier: CONST
  130               | VOLATILE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | L_BRAC declarator R_BRAC
  135                  | direct_declarator L_SQ constant_expression R_SQ
  136                  | direct_declarator L_SQ R_SQ
  137                  | direct_declarator L_BRAC parameter_type_list R_BRAC
  138                  | direct_declarator L_BRAC identifier_list R_BRAC
  139                  | direct_declarator L_BRAC R_BRAC

  140 pointer: PTR_TIMES
  141        | PTR_TIMES type_qualifier_list
  142        | PTR_TIMES pointer
  143        | PTR_TIMES type_qualifier_list pointer

  144 type_qualifier_list: type_qualifier
  145                    | type_qualifier_list type_qualifier

  146 parameter_type_list: parameter_list
  147                    | parameter_list COMMA ELLIPSIS

  148 parameter_list: parameter_declaration
  149               | parameter_list COMMA parameter_declaration

  150 parameter_declaration: declaration_specifiers declarator
  151                      | declaration_specifiers abstract_declarator
  152                      | declaration_specifiers

  153 identifier_list: IDENTIFIER
  154                | identifier_list COMMA IDENTIFIER

  155 type_name: specifier_qualifier_list
  156          | specifier_qualifier_list abstract_declarator

  157 abstract_declarator: pointer
  158                    | direct_abstract_declarator
  159                    | pointer direct_abstract_declarator

  160 direct_abstract_declarator: L_BRAC abstract_declarator R_BRAC
  161                           | L_SQ L_SQ
  162                           | L_SQ constant_expression R_SQ
  163                           | direct_abstract_declarator L_SQ L_SQ
  164                           | direct_abstract_declarator L_SQ constant_expression R_SQ
  165                           | L_BRAC R_BRAC
  166                           | L_BRAC parameter_type_list R_BRAC
  167                           | direct_abstract_declarator L_BRAC R_BRAC
  168                           | direct_abstract_declarator L_BRAC parameter_type_list R_BRAC

  169 initializer: assignment_expression
  170            | L_CURL initializer_list R_CURL
  171            | L_CURL initializer_list COMMA R_CURL

  172 initializer_list: initializer
  173                 | initializer_list COMMA initializer

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 labeled_statement: IDENTIFIER COLON statement
  181                  | CASE constant_expression COLON statement
  182                  | DEFAULT COLON statement

  183 compound_statement: L_CURL R_CURL
  184                   | L_CURL statement_list R_CURL
  185                   | L_CURL declaration_list R_CURL
  186                   | L_CURL declaration_list statement_list R_CURL

  187 declaration_list: declaration
  188                 | declaration_list declaration

  189 statement_list: statement
  190               | statement_list statement

  191 expression_statement: SEMI
  192                     | expression SEMI

  193 selection_statement: IF L_BRAC expression R_BRAC statement
  194                    | IF L_BRAC expression R_BRAC statement ELSE statement
  195                    | SWITCH L_BRAC expression R_BRAC statement

  196 iteration_statement: WHILE L_BRAC expression R_BRAC statement
  197                    | DO statement WHILE L_BRAC expression R_BRAC SEMI
  198                    | FOR L_BRAC expression_statement expression_statement R_BRAC statement
  199                    | FOR L_BRAC expression_statement expression_statement expression R_BRAC statement

  200 jump_statement: GOTO IDENTIFIER SEMI
  201               | CONTINUE SEMI
  202               | BREAK SEMI
  203               | RETURN SEMI
  204               | RETURN expression SEMI

  205 program: translation_unit

  206 translation_unit: external_declaration
  207                 | translation_unit external_declaration

  208 external_declaration: function_definition
  209                     | declaration

  210 function_definition: declaration_specifiers declarator declaration_list compound_statement
  211                    | declaration_specifiers declarator compound_statement
  212                    | declarator declaration_list compound_statement
  213                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <string> (258) 1 9 10 105 107 123 124 127 128 133 153 154 180 200
    CONSTANT <string> (259) 2
    STRING_LITERAL <string> (260) 3
    SIZEOF <string> (261) 19 20
    PTR_OP <string> (262) 10
    INC_OP <string> (263) 11 16
    DEC_OP <string> (264) 12 17
    LEFT_OP <string> (265) 37
    RIGHT_OP <string> (266) 38
    LE_OP <string> (267) 42
    GE_OP <string> (268) 43
    EQ_OP <string> (269) 45
    NE_OP <string> (270) 46
    AND_OP <string> (271) 54
    OR_OP <string> (272) 56
    MUL_ASSIGN <string> (273) 62
    DIV_ASSIGN <string> (274) 63
    MOD_ASSIGN <string> (275) 64
    ADD_ASSIGN <string> (276) 65
    SUB_ASSIGN <string> (277) 66
    LEFT_ASSIGN <string> (278) 67
    RIGHT_ASSIGN <string> (279) 68
    AND_ASSIGN <string> (280) 69
    XOR_ASSIGN <string> (281) 70
    OR_ASSIGN <string> (282) 71
    TYPE_NAME <string> (283) 104
    TYPEDEF <string> (284) 88
    EXTERN <string> (285) 89
    STATIC <string> (286) 90
    AUTO <string> (287) 91
    REGISTER <string> (288) 92
    CHAR <string> (289) 94
    SHORT <string> (290) 95
    INT <string> (291) 96
    LONG <string> (292) 97
    SIGNED <string> (293) 100
    UNSIGNED <string> (294) 101
    FLOAT <string> (295) 98
    DOUBLE <string> (296) 99
    CONST <string> (297) 129
    VOLATILE <string> (298) 130
    VOID <string> (299) 93
    STRUCT <string> (300) 108
    UNION (301) 109
    ENUM <string> (302) 122 123 124
    ELLIPSIS (303) 147
    CASE <string> (304) 181
    DEFAULT <string> (305) 182
    IF <string> (306) 193 194
    ELSE <string> (307) 194
    SWITCH <string> (308) 195
    WHILE <string> (309) 196 197
    DO (310) 197
    FOR <string> (311) 198 199
    GOTO <string> (312) 200
    CONTINUE <string> (313) 201
    BREAK <string> (314) 202
    RETURN <string> (315) 203 204
    L_BRAC <string> (316) 4 7 8 20 28 134 137 138 139 160 165 166 167 168 193 194 195 196 197 198 199
    R_BRAC <string> (317) 4 7 8 20 28 134 137 138 139 160 165 166 167 168 193 194 195 196 197 198 199
    L_SQ <string> (318) 6 135 136 161 162 163 164
    R_SQ <string> (319) 6 135 136 162 164
    L_CURL <string> (320) 105 106 122 123 170 171 183 184 185 186
    R_CURL <string> (321) 105 106 122 123 170 171 183 184 185 186
    SEMI <string> (322) 75 76 112 191 192 197 200 201 202 203 204
    COMMA <string> (323) 14 73 85 118 126 147 149 154 171 173
    DOT <string> (324) 9
    COLON <string> (325) 58 120 121 180 181 182
    EQ_SIGN <string> (326) 61 87 128
    AND_UNARY <string> (327) 21 48
    EXCLA <string> (328) 26
    TILDE <string> (329) 25
    SUB_OP <string> (330) 24 35
    ADD_UNARY <string> (331) 23 34
    PTR_TIMES <string> (332) 22 30 140 141 142 143
    DIV_OP <string> (333) 31
    MOD_OP <string> (334) 32
    LT_OP <string> (335) 40
    GT_OP <string> (336) 41
    XOR_OP <string> (337) 50
    OR_UNARY <string> (338) 52
    TERNARY_OP <string> (339) 58
    END (340)
    NOELSE <string> (341)


Nonterminals, with rules where they appear

    $accept (87)
        on left: 0
    primary_expression <node> (88)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <node> (89)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list <node> (90)
        on left: 13 14
        on right: 8 14
    unary_expression <node> (91)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 60
    unary_operator <node> (92)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression <node> (93)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression <node> (94)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression <node> (95)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression <node> (96)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression <node> (97)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression <node> (98)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression <node> (99)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression <node> (100)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression <node> (101)
        on left: 51 52
        on right: 52 53 54
    logical_and_expression <node> (102)
        on left: 53 54
        on right: 54 55 56
    logical_or_expression <node> (103)
        on left: 55 56
        on right: 56 57 58
    conditional_expression <node> (104)
        on left: 57 58
        on right: 58 59 74
    assignment_expression <node> (105)
        on left: 59 60
        on right: 13 14 60 72 73 169
    assignment_operator <node> (106)
        on left: 61 62 63 64 65 66 67 68 69 70 71
        on right: 60
    expression <node> (107)
        on left: 72 73
        on right: 4 6 58 73 192 193 194 195 196 197 199 204
    constant_expression <node> (108)
        on left: 74
        on right: 120 121 128 135 162 164 181
    declaration <node> (109)
        on left: 75 76
        on right: 187 188 209
    declaration_specifiers <node> (110)
        on left: 77 78 79 80 81 82
        on right: 75 76 78 80 82 150 151 152 210 211
    init_declarator_list <node> (111)
        on left: 83 85
        on right: 76 85
    $@1 (112)
        on left: 84
        on right: 85
    init_declarator <node> (113)
        on left: 86 87
        on right: 83 85
    storage_class_specifier <node> (114)
        on left: 88 89 90 91 92
        on right: 77 78
    type_specifier <node> (115)
        on left: 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 79 80 113 114
    struct_or_union_specifier <node> (116)
        on left: 105 106 107
        on right: 102
    struct_or_union <node> (117)
        on left: 108 109
        on right: 105 106 107
    struct_declaration_list <node> (118)
        on left: 110 111
        on right: 105 106 111
    struct_declaration <node> (119)
        on left: 112
        on right: 110 111
    specifier_qualifier_list <node> (120)
        on left: 113 114 115 116
        on right: 112 113 115 155 156
    struct_declarator_list <node> (121)
        on left: 117 118
        on right: 112 118
    struct_declarator <node> (122)
        on left: 119 120 121
        on right: 117 118
    enum_specifier <node> (123)
        on left: 122 123 124
        on right: 103
    enumerator_list <node> (124)
        on left: 125 126
        on right: 122 123 126
    enumerator <node> (125)
        on left: 127 128
        on right: 125 126
    type_qualifier <node> (126)
        on left: 129 130
        on right: 81 82 115 116 144 145
    declarator <node> (127)
        on left: 131 132
        on right: 86 87 119 121 134 150 210 211 212 213
    direct_declarator <node> (128)
        on left: 133 134 135 136 137 138 139
        on right: 131 132 135 136 137 138 139
    pointer <node> (129)
        on left: 140 141 142 143
        on right: 131 142 143 157 159
    type_qualifier_list <node> (130)
        on left: 144 145
        on right: 141 143 145
    parameter_type_list <node> (131)
        on left: 146 147
        on right: 137 166 168
    parameter_list <node> (132)
        on left: 148 149
        on right: 146 147 149
    parameter_declaration <node> (133)
        on left: 150 151 152
        on right: 148 149
    identifier_list <node> (134)
        on left: 153 154
        on right: 138 154
    type_name <node> (135)
        on left: 155 156
        on right: 20 28
    abstract_declarator <node> (136)
        on left: 157 158 159
        on right: 151 156 160
    direct_abstract_declarator <node> (137)
        on left: 160 161 162 163 164 165 166 167 168
        on right: 158 159 163 164 167 168
    initializer <node> (138)
        on left: 169 170 171
        on right: 87 172 173
    initializer_list <node> (139)
        on left: 172 173
        on right: 170 171 173
    statement <node> (140)
        on left: 174 175 176 177 178 179
        on right: 180 181 182 189 190 193 194 195 196 197 198 199
    labeled_statement <node> (141)
        on left: 180 181 182
        on right: 174
    compound_statement <node> (142)
        on left: 183 184 185 186
        on right: 175 210 211 212 213
    declaration_list <node> (143)
        on left: 187 188
        on right: 185 186 188 210 212
    statement_list <node> (144)
        on left: 189 190
        on right: 184 186 190
    expression_statement <node> (145)
        on left: 191 192
        on right: 176 198 199
    selection_statement <node> (146)
        on left: 193 194 195
        on right: 177
    iteration_statement <node> (147)
        on left: 196 197 198 199
        on right: 178
    jump_statement <node> (148)
        on left: 200 201 202 203 204
        on right: 179
    program <node> (149)
        on left: 205
        on right: 0
    translation_unit <node> (150)
        on left: 206 207
        on right: 205 207
    external_declaration <node> (151)
        on left: 208 209
        on right: 206 207
    function_definition <node> (152)
        on left: 210 211 212 213
        on right: 208


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    L_BRAC      shift, and go to state 22
    PTR_TIMES   shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    program                    go to state 35
    translation_unit           go to state 36
    external_declaration       go to state 37
    function_definition        go to state 38


State 1

  133 direct_declarator: IDENTIFIER .

    $default  reduce using rule 133 (direct_declarator)


State 2

  104 type_specifier: TYPE_NAME .

    $default  reduce using rule 104 (type_specifier)


State 3

   88 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 88 (storage_class_specifier)


State 4

   89 storage_class_specifier: EXTERN .

    $default  reduce using rule 89 (storage_class_specifier)


State 5

   90 storage_class_specifier: STATIC .

    $default  reduce using rule 90 (storage_class_specifier)


State 6

   91 storage_class_specifier: AUTO .

    $default  reduce using rule 91 (storage_class_specifier)


State 7

   92 storage_class_specifier: REGISTER .

    $default  reduce using rule 92 (storage_class_specifier)


State 8

   94 type_specifier: CHAR .

    $default  reduce using rule 94 (type_specifier)


State 9

   95 type_specifier: SHORT .

    $default  reduce using rule 95 (type_specifier)


State 10

   96 type_specifier: INT .

    $default  reduce using rule 96 (type_specifier)


State 11

   97 type_specifier: LONG .

    $default  reduce using rule 97 (type_specifier)


State 12

  100 type_specifier: SIGNED .

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: UNSIGNED .

    $default  reduce using rule 101 (type_specifier)


State 14

   98 type_specifier: FLOAT .

    $default  reduce using rule 98 (type_specifier)


State 15

   99 type_specifier: DOUBLE .

    $default  reduce using rule 99 (type_specifier)


State 16

  129 type_qualifier: CONST .

    $default  reduce using rule 129 (type_qualifier)


State 17

  130 type_qualifier: VOLATILE .

    $default  reduce using rule 130 (type_qualifier)


State 18

   93 type_specifier: VOID .

    $default  reduce using rule 93 (type_specifier)


State 19

  108 struct_or_union: STRUCT .

    $default  reduce using rule 108 (struct_or_union)


State 20

  109 struct_or_union: UNION .

    $default  reduce using rule 109 (struct_or_union)


State 21

  122 enum_specifier: ENUM . L_CURL enumerator_list R_CURL
  123               | ENUM . IDENTIFIER L_CURL enumerator_list R_CURL
  124               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 39
    L_CURL      shift, and go to state 40


State 22

  134 direct_declarator: L_BRAC . declarator R_BRAC

    IDENTIFIER  shift, and go to state 1
    L_BRAC      shift, and go to state 22
    PTR_TIMES   shift, and go to state 23

    declarator         go to state 41
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  140 pointer: PTR_TIMES .
  141        | PTR_TIMES . type_qualifier_list
  142        | PTR_TIMES . pointer
  143        | PTR_TIMES . type_qualifier_list pointer

    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    PTR_TIMES  shift, and go to state 23

    $default  reduce using rule 140 (pointer)

    type_qualifier       go to state 42
    pointer              go to state 43
    type_qualifier_list  go to state 44


State 24

  209 external_declaration: declaration .

    $default  reduce using rule 209 (external_declaration)


State 25

   75 declaration: declaration_specifiers . SEMI
   76            | declaration_specifiers . init_declarator_list SEMI
  210 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  211                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    L_BRAC      shift, and go to state 22
    SEMI        shift, and go to state 45
    PTR_TIMES   shift, and go to state 23

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 33
    pointer               go to state 34


State 26

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

  102 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 102 (type_specifier)


State 29

  105 struct_or_union_specifier: struct_or_union . IDENTIFIER L_CURL struct_declaration_list R_CURL
  106                          | struct_or_union . L_CURL struct_declaration_list R_CURL
  107                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 51
    L_CURL      shift, and go to state 52


State 30

  103 type_specifier: enum_specifier .

    $default  reduce using rule 103 (type_specifier)


State 31

   81 declaration_specifiers: type_qualifier .
   82                       | type_qualifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 32

  212 function_definition: declarator . declaration_list compound_statement
  213                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    L_CURL     shift, and go to state 54

    declaration                go to state 55
    declaration_specifiers     go to state 56
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 57
    declaration_list           go to state 58


State 33

  132 declarator: direct_declarator .
  135 direct_declarator: direct_declarator . L_SQ constant_expression R_SQ
  136                  | direct_declarator . L_SQ R_SQ
  137                  | direct_declarator . L_BRAC parameter_type_list R_BRAC
  138                  | direct_declarator . L_BRAC identifier_list R_BRAC
  139                  | direct_declarator . L_BRAC R_BRAC

    L_BRAC  shift, and go to state 59
    L_SQ    shift, and go to state 60

    $default  reduce using rule 132 (declarator)


State 34

  131 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    L_BRAC      shift, and go to state 22

    direct_declarator  go to state 61


State 35

    0 $accept: program . $end

    $end  shift, and go to state 62


State 36

  205 program: translation_unit .
  207 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    L_BRAC      shift, and go to state 22
    PTR_TIMES   shift, and go to state 23

    $default  reduce using rule 205 (program)

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    external_declaration       go to state 63
    function_definition        go to state 38


State 37

  206 translation_unit: external_declaration .

    $default  reduce using rule 206 (translation_unit)


State 38

  208 external_declaration: function_definition .

    $default  reduce using rule 208 (external_declaration)


State 39

  123 enum_specifier: ENUM IDENTIFIER . L_CURL enumerator_list R_CURL
  124               | ENUM IDENTIFIER .

    L_CURL  shift, and go to state 64

    $default  reduce using rule 124 (enum_specifier)


State 40

  122 enum_specifier: ENUM L_CURL . enumerator_list R_CURL

    IDENTIFIER  shift, and go to state 65

    enumerator_list  go to state 66
    enumerator       go to state 67


State 41

  134 direct_declarator: L_BRAC declarator . R_BRAC

    R_BRAC  shift, and go to state 68


State 42

  144 type_qualifier_list: type_qualifier .

    $default  reduce using rule 144 (type_qualifier_list)


State 43

  142 pointer: PTR_TIMES pointer .

    $default  reduce using rule 142 (pointer)


State 44

  141 pointer: PTR_TIMES type_qualifier_list .
  143        | PTR_TIMES type_qualifier_list . pointer
  145 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    PTR_TIMES  shift, and go to state 23

    $default  reduce using rule 141 (pointer)

    type_qualifier  go to state 69
    pointer         go to state 70


State 45

   75 declaration: declaration_specifiers SEMI .

    $default  reduce using rule 75 (declaration)


State 46

   76 declaration: declaration_specifiers init_declarator_list . SEMI
   85 init_declarator_list: init_declarator_list . COMMA init_declarator $@1

    SEMI   shift, and go to state 71
    COMMA  shift, and go to state 72


State 47

   83 init_declarator_list: init_declarator .

    $default  reduce using rule 83 (init_declarator_list)


State 48

   86 init_declarator: declarator .
   87                | declarator . EQ_SIGN initializer
  210 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  211                    | declaration_specifiers declarator . compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    L_CURL     shift, and go to state 54
    EQ_SIGN    shift, and go to state 73

    $default  reduce using rule 86 (init_declarator)
